syntax = "proto3";

option csharp_namespace = "Microservices.Grpc";

service GrpcPlatform {
	rpc GetAllPlatforms (GetAllPlatformsRequest) returns (GetAllPlatformsResponse);
}

message GrpcPlatformModel {
	int32 platformId = 1;
	string name = 2;
	string publisher = 3;
}

message GetAllPlatformsRequest {}

message GetAllPlatformsResponse {
	repeated GrpcPlatformModel platforms = 1;
}